<resources>
    <string name="app_name">Wartaone</string>
    <string name="label_very_long_subtitle">Example of very long of subtitle</string>
    <string name="label_very_long_title">Very Long Title</string>
    <string name="label_short_title">Short Title</string>
    <string name="see_all">See All</string>
    <string name="label_on_loading">On Loading. Please Wait</string>
    <string name="top_news">Top News</string>
    <string name="all_news">All News</string>
    <string name="headline_news">Headline News</string>
    <string name="title_mynews">My News</string>
    <string name="title_activity_headline_news_screen">HeadlineNewsScreen</string>

</resources>